Resolved compile build error and simplified GWT pom config
Former-commit-id: 92604f8f85a573543bcc5e87f0c7cf50a2ef05ed