@@ -73,28 +73,11 @@
                 </configuration>
             </plugin>
 
-            <!-- GWT -->
-            <!-- First run 'mvn package -Ppostgres' to setup persistence.xml -->
-            <!-- run 'mvn gwt:run' for running application from terminal -->
-            <!-- run 'mvn integration-test' for running the GwtTestSuite -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>gwt-maven-plugin</artifactId>
                 <version>${gwt-maven-plugin.version}</version>
                 <configuration>
-                    <gwtSdkFirstInClasspath>true</gwtSdkFirstInClasspath>
-
-                    <strict>true</strict>
-                    <testTimeOut>180</testTimeOut>
-                    <!-- With multiple tests use GwtTestSuite.java for speed -->
-                    <includes>**/*GwtTest.java</includes>
-                    <!-- <includes>**/*GwtTestSuite.java</includes> -->
-                    <mode>htmlunit</mode>
-
-                    <extraJvmArgs>-Xss1024K -Xmx1024M -XX:MaxPermSize=256M</extraJvmArgs>
-                    <logLevel>INFO</logLevel>
-                    <style>${gwt.style}</style>
-
                     <copyWebapp>true</copyWebapp>
                     <hostedWebapp>${webappDirectory}</hostedWebapp>
 
@@ -106,8 +89,6 @@
                     <modules>
                         <module>com.gwtplatform.carstore.CarStore</module>
                     </modules>
-
-                    <compileReport>true</compileReport>
                 </configuration>
                 <executions>
                     <execution>
